Labels to text inputs Minor cosmetic code changes

--- a/JS_HigharcChallenge/html/Task1.html
+++ b/JS_HigharcChallenge/html/Task1.html
@@ -23,6 +23,7 @@
         data structure.
     </p>
     <form action="/task1_data" id="geom_graph_json_entry">
+        <label for="poly_graph">Geometry graph JSON:</label>
         <input type="text" name="geom_graph">
         <input type="submit" value="Send">
     </form>
