--- a/JS_HigharcChallenge/html/Task4.html
+++ b/JS_HigharcChallenge/html/Task4.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Higharc challenge Task 1</title>
+    <title>Higharc challenge Task 4</title>
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
@@ -11,19 +11,19 @@
 </head>
 <body>
     <p>
-        Algorithm 2: Write an algorithm that processes the output of Algorithm 1 in order to find
-        the neighboring faces of any face. That is, faces that share an edge with the query face.
-        It should take the output of <a href="Task1.html">Algorithm 1</a> as input, unique identifier
-        for the face and output an array of face identifiers. The face identifiers might be an integer
-        or string.
+        Algorithm 4: Implement an algorithm that, given a start face, computes the neighboring
+        faces, and then the neighbors of the neighbor faces and so on. The system should find
+        “layers” of neighboring face sets. The output should be an array of arrays of face ids until
+        all faces have been visited.
     </p>
     <p>
-        Example inputs:
-        {"vertices":[[-38.2,0],[29.87,45.12],[60,15.8],[11.3,-23.09],[0,5],[-12,-49.784],[27,-35.55]],"edges":[[0,1],[1,2],[2,3],[3,0],[4,0],[4,1],[4,2],[4,3],[3,5],[6,3],[6,5]]} </br>
-        {"vertices": [[-38.2, 0],[29.87, 45.12],[60, 15.8],[11.3, -23.09],[0, 5],[-12, -49.784],[27, -35.55]],"edges": [[0, 1], [1, 2], [2, 3],[3, 0], [4, 0], [4, 1],[4, 2], [4, 3]]} </br>
+        Example inputs: </br>
+        {"vertices":[[-38.2,0],[29.87,45.12],[60,15.8],[11.3,-23.09],[0,5],[-12,-49.784],[27,-35.55]],"edges":[[0,1],[1,2],[2,3],[3,0],[4,0],[4,1],[4,2],[4,3],[3,5],[6,3],[6,5]],"faces":[{"name":"A","is_interior_poly":true,"edges":[-4,-8,5]},{"name":"B","is_interior_poly":true,"edges":[6,-1,-5]},{"name":"C","is_interior_poly":true,"edges":[-3,-7,8]},{"name":"D","is_interior_poly":false,"edges":[1,2,3,-10,11,-9,4]},{"name":"E","is_interior_poly":true,"edges":[7,-2,-6]},{"name":"F","is_interior_poly":true,"edges":[-11,10,9]}]} </br>
     </p>
-    <form action="/task2_data" id="task2_json_entry">
+    <form action="/task4_data" id="task4_json_entry">
+        <label for="poly_graph">Polygon-Geometry dual graph JSON:</label>
         <input type="text" name="poly_graph">
+        <label for="poly_graph">Starting Face:</label>
         <input type="text" name="face">
         <input type="submit" value="Send">
     </form>
@@ -32,7 +32,7 @@
 
     <script>
         // Attach a submit handler to the form
-        $("#task2_json_entry").submit(function (event) {
+        $("#task4_json_entry").submit(function (event) {
 
             // Stop form from submitting normally
             event.preventDefault();
@@ -62,13 +62,19 @@
 
             // Put the results in a div
             posting.done(function (data) {
-                //                var content = $(data).find("#content");
                 var result = JSON.stringify(data);
                 $("#result").empty().append(result);
                 var context = canvas.getContext('2d');
                 context.clearRect(0, 0, canvas.scrollWidth, canvas.scrollHeight);
                 const colors = ['red', 'blue', 'green', 'yellow', 'purple',
                     'black', 'orange', 'teal', 'grey', 'tomato', 'lime'];
+
+                var dict = new Object();
+                for (let i = 0; i < data.length; ++i) {
+                    for (let j = 0; j < data[i].length; ++j) {
+                        dict[data[i][j]] = i;
+                    }
+                }
 
                 let poly_graph = JSON.parse(poly_graph_json);
                 for (let vidx = 0; vidx < poly_graph.vertices.length; ++vidx) {
@@ -79,7 +85,6 @@
                     if (v[1] > maxy) maxy = v[1];
                 }
                 scale = Math.max(maxx - minx, maxy - miny);
-                var color_idx = 0;
                 for (let pidx = 0; pidx < poly_graph.faces.length; ++pidx) {
                     var com = [0.0, 0.0]; // center of mass
                     let p = poly_graph.faces[pidx];
@@ -101,13 +106,8 @@
                         com[1] += toCanvasY(common_vertex[1]);
                     }
                     context.closePath();
-                    if (result.includes(p.name)) {
-                        context.fillStyle = colors[color_idx++ % colors.length];
-                        context.fill();
-                    } else {
-                        context.fillStyle = 'black';
-                        context.stroke();
-                    }
+                    context.fillStyle = colors[dict[p.name] % colors.length];
+                    context.fill();
                     com[0] /= p.edges.length;
                     com[1] /= p.edges.length;
                     context.font = '12px serif';
